--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,138 @@
-<p style="color: white;">dashboard works!</p>
+<nav class="navbar navbar-light bg-dark ">
+    <a class="navbar-brand  " href="#" style="color:rgb(85, 98, 237);"><b>&#169; HAFC Bank Pvt.Ltd </b></a>
+    <span class="quote text-light">Giving you freedom...</span>
+    <button (click)="logout()" class="btn btn-warning">Logout</button>
+    
+</nav>
+<br>
+
+
+<h1 style="color: aliceblue;">Welcome {{user}}</h1>
+<h3 style="color: white;">Login Details are: {{loginDate|date:'fullDate'|uppercase}}</h3>
+<a  routerLink ="/transation">Transation history</a>
+
+<!-- animation -->
+<!-- <app-animation-demo></app-animation-demo> -->
+
+
+<button (click)="deleteFromParent()" style="float: right; margin-right: 20px;" class="btn btn-danger">Delete</button>
+<br>
+<br>
+<!-- child -->
+<app-delete-conform (onDelete)="onDelete($event)" (onCancel)="onCancel()" [item]="acno"></app-delete-conform>
+
+
+
+
+<div [ngClass]="acno? 'style1': '' " class="container col-md-12 mt-0">
+    <div class="d-flex justify-content-center h-100">
+        <div class="card">
+            <div class="card-header">
+                <h3 appHighlight class="text-center">Deposit form</h3>
+
+            </div>
+            <div  class="card-body">
+                <form [formGroup]="depositForm"  (ngSubmit)="deposit()">
+
+                    <div class="input-group form-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fas fa-user"></i></span>
+                        </div>
+                        <input type="text" name="acno" formControlName="acno" class="form-control" placeholder="Acount Number" id="login_accno" required>
+
+                    </div>
+
+                    <div *ngIf="(this.depositForm.get('acno')?.touched||this.depositForm.get('acno')?.dirty)&&this.depositForm.get('acno')?.errors" style="color: red;">
+                        Invalid account Number</div>
+
+                       
+                  
+                    <div class="input-group form-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fas fa-key"></i></span>
+                        </div>
+                        <input type="password" name="pswd"  formControlName="pswd" class="form-control" placeholder="Password" id="login_password"
+                            required>
+                    </div>
+
+                    <div *ngIf="(this.depositForm.get('pswd')?.touched||this.depositForm.get('pswd')?.dirty)&&this.depositForm.get('pswd')?.errors" style="color: red;">
+                        Invalid password</div>
+
+                    <div class="input-group form-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fas fa-user"></i></span>
+                        </div>
+                        <input type="text" name="amount"  formControlName="amount" class="form-control" placeholder="Amount" id="login_amt"
+                            required>
+                    </div>
+
+                    <div *ngIf="(this.depositForm.get('amount')?.touched||this.depositForm.get('amount')?.dirty)&&this.depositForm.get('amount')?.errors" style="color: red;">
+                        Input amount</div>
+
+
+                    <div class="form-group">
+                        <input type="submit" value="Deposit"
+                            class="btn float-right login_btn " style="width:50%">
+                    </div>
+                </form>
+            </div>
+            
+        </div>
+    </div>
+</div>
+
+<div [ngClass]="acno? 'style1': '' " class="container col-md-12 mt-0">
+    <div class="d-flex justify-content-center h-100">
+        <div class="card">
+            <div class="card-header">
+                <h3 appHighlight class="text-center">whithdraw form</h3>
+
+            </div>
+            <div class="card-body">
+                <form [formGroup]="whithdrawForm"  (ngSubmit)="whithdraw()">
+
+                    <div class="input-group form-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fas fa-user"></i></span>
+                        </div>
+                        <input type="text" name="acno" formControlName="acno1" class="form-control" placeholder="Acount Number" id="login_accno" required>
+
+                    </div>
+
+                    <div *ngIf="(this.whithdrawForm.get('acno1')?.touched||this.whithdrawForm.get('acno1')?.dirty)&&this.whithdrawForm.get('acno1')?.errors" style="color: red;">
+                        Invalid password</div>
+                       
+                  
+                    <div class="input-group form-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fas fa-key"></i></span>
+                        </div>
+                        <input type="password" name="pswd"  formControlName="pswd1" class="form-control" placeholder="Password" id="login_password"
+                            required>
+                    </div>
+
+                    <div *ngIf="(this.whithdrawForm.get('pswd1')?.touched||this.whithdrawForm.get('pswd1')?.dirty)&&this.whithdrawForm.get('pswd1')?.errors" style="color: red;">
+                        Invalid password</div>
+
+                    <div class="input-group form-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fas fa-user"></i></span>
+                        </div>
+                        <input type="text" name="amount"  formControlName="amount1" class="form-control" placeholder="Amount" id="login_amt"
+                            required>
+                    </div>
+
+                    <div *ngIf="(this.whithdrawForm.get('amount1')?.touched||this.whithdrawForm.get('amount1')?.dirty)&&this.whithdrawForm.get('amount1')?.errors" style="color: red;">
+                        Input amount</div>
+
+
+                    <div class="form-group">
+                        <input type="submit" value="whithdraw"
+                            class="btn float-right login_btn " style="width:50%">
+                    </div>
+                </form>
+            </div>
+            
+        </div>
+    </div>
+</div>
