--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,25 +11,33 @@
     <div class="d-flex justify-content-center h-100">
         <div class="card">
             <div class="card-header">
-                <h3 class="text-center">Sign In</h3>
+                <h3 appHighlight class="text-center">Sign In</h3>
 
             </div>
             <div class="card-body">
-                <form  (ngSubmit)="login()">
+                <form [formGroup]="loginForm"  (ngSubmit)="login()">
                     <div class="input-group form-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-user"></i></span>
                         </div>
-                        <input type="text" name="acno" [(ngModel)]="acno" class="form-control" [placeholder]="accnum" id="login_accno" required>
+                        <input type="text" name="acno" formControlName="acno" class="form-control" [placeholder]="accnum" id="login_accno" required>
 
                     </div>
+
+                    <div *ngIf="(this.loginForm.get('acno')?.touched||this.loginForm.get('acno')?.dirty)&&this.loginForm.get('acno')?.errors" style="color: red;">
+                        Invalid account Number</div>
+
+                        
                     <div class="input-group form-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-key"></i></span>
                         </div>
-                        <input type="password" name="pswd"  [(ngModel)]="pswd" class="form-control" placeholder="password" id="login_password"
+                        <input type="password" name="pswd"  formControlName="pswd" class="form-control" placeholder="password" id="login_password"
                             required>
                     </div>
+
+                    <div *ngIf="(this.loginForm.get('pswd')?.touched||this.loginForm.get('pswd')?.dirty)&&this.loginForm.get('pswd')?.errors" style="color: red;">
+                        Invalid password</div>
 
                     <div class="form-group">
                         <input type="submit" value="Login"
@@ -37,7 +45,7 @@
                     </div>
                 </form>
             </div>
-            <p style="color:white;align-items:baseline;">Not a user? <a href="./register.html">Register</a></p>
+            <p style="color:white;align-items:baseline;">Not a user? <a routerLink="/register">Register</a></p>
         </div>
     </div>
 </div>
